--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "express": "^4.15.4",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "mongoose": "^5.2.9",
+    "morgan": "^1.9.0"
   }
 }
